set fixed gap for the description containers
- the gap will fix even if resized, better than setting margin

--- a/style.css
+++ b/style.css
@@ -105,4 +105,5 @@ body {
 .content {
     display: flex;
     margin: 0 120px; 
+    gap: 20px;
 }
